test/expected/shellcheck_trap_quoting.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "trap" "echo $unset_at_set_time" "EXIT"]
  [CompoundListCondition, None]
    [SimpleCommand "trap" "echo $expands_when_fired" "EXIT"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "done"]
[Word
  Unquoted "trap"
]
[Word
  DoubleQuoted "echo "
  Variable "unset_at_set_time"
]
[Word
  Unquoted "EXIT"
]
[Word
  Unquoted "trap"
]
[Word
  Literal "echo $expands_when_fired"
]
[Word
  Unquoted "EXIT"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "done"
]
shit: 5:6: warning: The double-quoted trap action expands now, when the trap is set, not when it fires.
     5 |  trap "echo $unset_at_set_time" EXIT
       |       ^~~~~~~~~~~~~~~~~~~~~~~~~ here.
note: Single-quote it so it expands as the signal arrives.
shit: 5:6: error: Unable to expand 'unset_at_set_time' because the parameter is not set.
     5 |  trap "echo $unset_at_set_time" EXIT
       |       ^~~~~~~~~~~~~~~~~~~~~~~~~ here.
